Complete days 40-59: add Notes & reference and How to Run; learner notes for days 1-59
- Add 'Notes & reference (use these when stuck)' to day READMEs 40-59
- Add 'How to Run' section to days 40-59 (Maven/IDE/Spring Boot/HTML as appropriate)
- Main README: 'When you're stuck' section for finding notes
- Notes & reference and Refer to blocks already present for days 1-39
- Sample days 1 and 26 compile/run verified