@@ -170,6 +170,18 @@ public class TurtleCrossing extends Application {
 | Collision Detection | Check intersections | Player vs cars |
 | Game State | Current game situation | Level, score, lives |
 
+## 📌 Notes & reference (use these when stuck)
+
+**When you're stuck:**
+- **Player movement:** Re-read **Step 1** — move up/down (or jump); keep within road/safe zone — see **Step 2**
+- **Obstacles:** Spawn cars at random lanes; move left (or right); remove when off-screen — see **Step 2**
+- **Collision:** Check player bounds vs each car bounds (rectangle overlap) — see **Step 3**
+- **Starter vs solution:** See `_start/README.md` for common challenges; see `_end/README.md` for level and collision logic
+
+**Related days:** Day 20 (animation); Day 22 (collision). **JavaFX:** See How to Run / Troubleshooting for module path.
+
+**Quick reference:** Rectangle overlap: `x1 < x2+w2 && x2 < x1+w1 && y1 < y2+h2 && y2 < y1+h1`
+
 ## ✅ Checklist
 - [ ] Can create side-scrolling games
 - [ ] Can manage obstacles
@@ -185,6 +197,79 @@ This day includes starter and completed code examples:
 - **`_end/`** - Completed solutions with detailed explanations
 
 Check these folders to see the progression from start to finish and learn from the learning curve notes!
+
+## 💻 How to Run Java Files
+
+### Prerequisites
+Make sure you have Java installed on your system:
+- **Check installation**: Open terminal/command prompt and run `java -version`
+- **If not installed**: Download JDK from [Oracle](https://www.oracle.com/java/technologies/downloads/) or [OpenJDK](https://openjdk.org/)
+
+### Running Java Files
+
+#### **Windows**
+
+1. **Open Command Prompt or PowerShell**
+   - Press `Win + R`, type `cmd` or `powershell`, press Enter
+
+2. **Navigate to the project directory**
+   ```cmd
+   cd "path\to\100-java-basics-advance\day23\_end\src"
+   ```
+
+3. **Compile the Java file**
+   ```cmd
+   javac TurtleCrossing.java
+   ```
+
+4. **Run the compiled program**
+   ```cmd
+   java TurtleCrossing
+   ```
+
+#### **Mac / Linux**
+
+1. **Open Terminal**
+   - Mac: Press `Cmd + Space`, type "Terminal", press Enter
+   - Linux: Press `Ctrl + Alt + T` or search for "Terminal"
+
+2. **Navigate to the project directory**
+   ```bash
+   cd ~/projects/100-java-basics-advance/day23/_end/src
+   ```
+
+3. **Compile the Java file**
+   ```bash
+   javac TurtleCrossing.java
+   ```
+
+4. **Run the compiled program**
+   ```bash
+   java TurtleCrossing
+   ```
+
+### Using an IDE (Recommended)
+
+**IntelliJ IDEA:**
+1. Open the project folder in IntelliJ IDEA
+2. Right-click on the Java file
+3. Select "Run 'TurtleCrossing.main()'"
+
+**VS Code:**
+1. Install "Extension Pack for Java"
+2. Open the Java file
+3. Click "Run" button above `main` method or press `F5`
+
+**Eclipse:**
+1. Import project into Eclipse
+2. Right-click on the Java file
+3. Select "Run As" → "Java Application"
+
+### Troubleshooting
+
+- **"javac: command not found"** - Java is not installed or not in PATH
+- **"Error: Could not find or load main class"** - Make sure you're in the correct directory and class name matches filename
+- **JavaFX apps**: If using Java 11+, add VM options: `--module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml`
 
 ## 🚀 Next Steps
 After completing Day 23, you should be able to:
