@@ -209,6 +209,18 @@ public class Converter extends Application {
 | Layout | Container | `VBox`, `HBox`, `GridPane` |
 | Event Handler | Respond to actions | `button.setOnAction()` |
 
+## 📌 Notes & reference (use these when stuck)
+
+**When you're stuck:**
+- **JavaFX structure:** Re-read **Step 1** — class extends `Application`, override `start(Stage)` — see **Step 2**
+- **Controls:** Re-read **Step 2** — `Button`, `Label`, `TextField`; add to `VBox`/`HBox` — see **Step 3**
+- **Events:** `button.setOnAction(e -> { ... });` — get text: `textField.getText()` — see **Step 3**
+- **Starter vs solution:** See `_start/README.md` for common challenges; see `_end/README.md` for Converter logic
+
+**Related days:** Day 18 (canvas); Day 28 (Pomodoro GUI). **JavaFX:** See How to Run / Troubleshooting for module path.
+
+**Quick reference:** `new VBox(10, node1, node2)` · `scene = new Scene(root, w, h)` · `stage.show()` at end
+
 ## ✅ Checklist
 - [ ] Understand JavaFX structure
 - [ ] Can create GUI applications
@@ -225,6 +237,79 @@ This day includes starter and completed code examples:
 - **`_end/`** - Completed solutions with detailed explanations
 
 Check these folders to see the progression from start to finish and learn from the learning curve notes!
+
+## 💻 How to Run Java Files
+
+### Prerequisites
+Make sure you have Java installed on your system:
+- **Check installation**: Open terminal/command prompt and run `java -version`
+- **If not installed**: Download JDK from [Oracle](https://www.oracle.com/java/technologies/downloads/) or [OpenJDK](https://openjdk.org/)
+
+### Running Java Files
+
+#### **Windows**
+
+1. **Open Command Prompt or PowerShell**
+   - Press `Win + R`, type `cmd` or `powershell`, press Enter
+
+2. **Navigate to the project directory**
+   ```cmd
+   cd "path\to\100-java-basics-advance\day27\_end\src"
+   ```
+
+3. **Compile the Java file**
+   ```cmd
+   javac Converter.java
+   ```
+
+4. **Run the compiled program**
+   ```cmd
+   java Converter
+   ```
+
+#### **Mac / Linux**
+
+1. **Open Terminal**
+   - Mac: Press `Cmd + Space`, type "Terminal", press Enter
+   - Linux: Press `Ctrl + Alt + T` or search for "Terminal"
+
+2. **Navigate to the project directory**
+   ```bash
+   cd ~/projects/100-java-basics-advance/day27/_end/src
+   ```
+
+3. **Compile the Java file**
+   ```bash
+   javac Converter.java
+   ```
+
+4. **Run the compiled program**
+   ```bash
+   java Converter
+   ```
+
+### Using an IDE (Recommended)
+
+**IntelliJ IDEA:**
+1. Open the project folder in IntelliJ IDEA
+2. Right-click on the Java file
+3. Select "Run 'Converter.main()'"
+
+**VS Code:**
+1. Install "Extension Pack for Java"
+2. Open the Java file
+3. Click "Run" button above `main` method or press `F5`
+
+**Eclipse:**
+1. Import project into Eclipse
+2. Right-click on the Java file
+3. Select "Run As" → "Java Application"
+
+### Troubleshooting
+
+- **"javac: command not found"** - Java is not installed or not in PATH
+- **"Error: Could not find or load main class"** - Make sure you're in the correct directory and class name matches filename
+- **JavaFX apps**: If using Java 11+, add VM options: `--module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml`
 
 ## 🚀 Next Steps
 After completing Day 27, you should be able to:
